Implement permission checks for heart commands and enhance heart item usage logic